<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_tools_py</name>
  <version>0.1.0</version>
  <description>Rviz Tools for python</description>
  <maintainer email="dbworth@cmu.edu">David Butterworth</maintainer>
  <license>BSD</license>


  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>rospy</build_depend> -->
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <!-- <build_depend>rospkg</build_depend> -->

  <exec_depend>geometry_msgs</exec_depend>
  <!-- <exec_depend>rospy</exec_depend> -->
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <!-- <exec_depend>rospkg</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
